--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <header> MENU DO SITE </header>
+        <div class="menu">
+            <header> MENU DO SITE </header>
+        </div>
 
         <div id="banner">
             BANNER
@@ -17,11 +19,22 @@
 
         <div id="destaque">
             <div class="destaque-colunas">
-
+                Fuetbol
             </div>
             <div class="destaque-colunas">
-                
+                Basquete
             </div>
+        </div>
+
+        <div id="categorias">
+            <div class="categoria-colunas">Tenis</div>
+            <div class="categoria-colunas">Volei</div>
+            <div class="categoria-colunas vermelho">Flamengo</div>
+            <div class="categoria-colunas azul">Boca Juniors</div>
+        </div>
+
+        <div id="rodape">
+            <footer>Rodapé</footer>
         </div>
 
     </div>
